force-app/main/default/objects/Account/fields/Account_Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Advisor_Name__c</fullName>
    <formula>Parent.Account_Advisor__r.FirstName &amp; &quot; &quot; &amp; Parent.Account_Advisor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Advisor Name</label>
    <type>Text</type>
</CustomField>