force-app/main/default/objects/Account/fields/Account_Discount__c.field-meta.xml
<CustomField>
    <fullName>Account_Discount__c</fullName>
    <label>Overriding Account Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>