force-app/main/default/objects/Account/fields/Account_Discount_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Discount_Start_Date__c</fullName>
    <label>Account Discount Start Date</label>
    <type>DateTime</type>
</CustomField>