force-app/main/default/objects/Account/fields/Account_Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Order_Date__c</fullName>
    <label>Account Last Order Date</label>
    <type>Date</type>
</CustomField>