force-app/main/default/objects/Account/fields/Account_Managed_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Managed_Group__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;Location&quot;,
IF(ISBLANK(Parent.Linked_Group__c),Parent.Name,Parent.Linked_Group__r.Name),
IF(ISBLANK(Linked_Group__c),Name,Linked_Group__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Managed Group</label>
    <type>Text</type>
</CustomField>