force-app/main/default/objects/Account/fields/Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email__c</fullName>
    <description>workflow is used to populate email for current AM, so that the field can be used to email AMs updates on Key Accounts.</description>
    <label>Account Manager Email</label>
    <type>Email</type>
</CustomField>