force-app/main/default/objects/Account/fields/Account_ManagerLocation__c.field-meta.xml
<CustomField>
    <fullName>Account_ManagerLocation__c</fullName>
    <formula>Parent.Account_Manager__r.FirstName &amp; &quot; &quot; &amp; Parent.Account_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountManager</label>
    <type>Text</type>
</CustomField>