force-app/main/default/objects/Account/fields/Account_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Service_Status__c</fullName>
    <defaultValue>IF( $RecordType.Name = &quot;Account&quot;, &quot;OK&quot;, null)</defaultValue>
    <label>Account Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card Only</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>