force-app/main/default/objects/Account/fields/Account_Start__c.field-meta.xml
<CustomField>
    <fullName>Account_Start__c</fullName>
    <label>Account Start</label>
    <type>Date</type>
</CustomField>