force-app/main/default/objects/Account/fields/AccountManagerName__c.field-meta.xml
<CustomField>
    <fullName>AccountManagerName__c</fullName>
    <formula>Account_Manager__r.FirstName + &apos; &apos; + Account_Manager__r.LastName</formula>
    <label>Account Manager Name</label>
    <type>Text</type>
</CustomField>