force-app/main/default/objects/Account/fields/Active_Collections__c.field-meta.xml
<CustomField>
    <fullName>Active_Collections__c</fullName>
    <formula>IF( Monday_Collection__c &gt; 0, 1, 0)+
IF(Tuesday_Collection__c &gt; 0, 1, 0)+
IF( Wednesday_Collection__c &gt; 0, 1, 0)+
IF(Thursday_Collection__c &gt; 0, 1, 0)+
IF( Friday_Collection__c &gt; 0, 1, 0)+
IF(Saturday_Collection__c &gt; 0, 1, 0)+
IF(Sunday_Collection__c &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Collections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>