force-app/main/default/objects/Account/fields/Active_Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>Active_Direct_Debit__c</fullName>
    <formula>IF(AND(
 Direct_Debit_authorised__c = TRUE, 
 DATEVALUE(Direct_Debit_Authorised_Date__c) &lt; TODAY(),
 ISNULL(Direct_Debit_Details_Entry_Date__c)= FALSE, 
 LEN(dd_sort_code__c)=6 ,
 LEN(dd_account_number__c)=8  , 
 TEXT(Enqix_Payment_Method__c)= &quot;Direct Debit&quot;) ,
TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For the DD to be active the following needs to be true - 
Enqix Payment Method = Direct Debit
DD Authorised = True
Direct Debit Authorised Date &lt; Today
Direct Debit Details Entry Date is filled out
DD Sort Code and Account Number have the right number of digits.</inlineHelpText>
    <label>Active Direct Debit</label>
    <type>Checkbox</type>
</CustomField>