force-app/main/default/objects/Account/fields/AD_KG_L12M__c.field-meta.xml
<CustomField>
    <fullName>AD_KG_L12M__c</fullName>
    <label>AD KG L12M</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>