force-app/main/default/objects/Account/fields/Additional_Partner__c.field-meta.xml
<CustomField>
    <fullName>Additional_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Partner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This account is not a partnership</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Additional Partner)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>