force-app/main/default/objects/Account/fields/AdHocPONumber__c.field-meta.xml
<CustomField>
    <fullName>AdHocPONumber__c</fullName>
    <label>Ad-hoc PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>