force-app/main/default/objects/Account/fields/adopted_parent_opportunity__c.field-meta.xml
<CustomField>
    <fullName>adopted_parent_opportunity__c</fullName>
    <label>adopted parent opportunity</label>
    <type>Date</type>
</CustomField>