force-app/main/default/objects/Account/fields/Advanced_Carbon_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Carbon_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Carbon Reporting</label>
    <type>Checkbox</type>
</CustomField>