force-app/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>requested by financial planning and analysis</description>
    <label>Age</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>