force-app/main/default/objects/Account/fields/AM_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>AM_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>