force-app/main/default/objects/Account/fields/Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Amount_Outstanding__c</fullName>
    <description>Sum of all invoice amounts outstanding</description>
    <label>Amount Outstanding</label>
    <summarizedField>Invoice_Header__c.AmountOutstanding__c</summarizedField>
    <summaryForeignKey>Invoice_Header__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>