force-app/main/default/objects/Account/fields/AreDocsCompliant__c.field-meta.xml
<CustomField>
    <fullName>AreDocsCompliant__c</fullName>
    <formula>AND(
MotorInsurances__r.IsActive__c,
EmployersLiabilityInsurance__r.IsActive__c,
PublicLiabilityInsurance__r.IsActive__c,
WasteCarrierLicence__r.IsActive__c
)</formula>
    <label>Docs Compliant?</label>
    <type>Checkbox</type>
</CustomField>