force-app/main/default/objects/Account/fields/At_risk_2020_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>At_risk_2020_Price_Change__c</fullName>
    <label>At risk: 2020 Price Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unclear from response</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
                <label>No response/Uncontacted</label>
            </value>
            <value>
                <fullName>Yes (no spend)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>