force-app/main/default/objects/Account/fields/Attribution__c.field-meta.xml
<CustomField>
    <fullName>Attribution__c</fullName>
    <label>Attribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Mile</fullName>
            </value>
            <value>
                <fullName>Redbridge Council</fullName>
            </value>
            <value>
                <fullName>Albion Waste</fullName>
            </value>
            <value>
                <fullName>24 Cleaning</fullName>
            </value>
            <value>
                <fullName>Greener Than Green</fullName>
            </value>
            <value>
                <fullName>Greenzone</fullName>
            </value>
            <value>
                <fullName>Greenzone Synergy</fullName>
            </value>
            <value>
                <fullName>Non Customer</fullName>
            </value>
            <value>
                <fullName>Greenzone Pipeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>