force-app/main/default/objects/Account/fields/Average_Order_days__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_days__c</fullName>
    <label>Average Order days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>