force-app/main/default/objects/Account/fields/BACS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>BACS_Account_Number__c</fullName>
    <label>BACS Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>