force-app/main/default/objects/Account/fields/BACS_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>BACS_Sort_Code__c</fullName>
    <label>BACS Sort Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>