force-app/main/default/objects/Account/fields/BG2019_Sales_Category_BG__c.field-meta.xml
<CustomField>
    <fullName>BG2019_Sales_Category_BG__c</fullName>
    <description>If new in calendar year = new
If new last calendar year = prior new
If account managed and new at least 2 calendar years ago = Key Account
If indirect and new at least 2 calendar years ago = Indirect
If new at least 2 calendar years ago and spending £5000 PA+ = Large
If new at least 2 calendar years ago and spending £1000 - £5000 PA = Medium
If new at least 2 calendar years ago and spending £100 - £1000 PA = Small
If new at least 2 calendar years ago and spending &lt; £100 PA = Micro</description>
    <label>BG Sales Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>