force-app/main/default/objects/Account/fields/BID__c.field-meta.xml
<CustomField>
    <fullName>BID__c</fullName>
    <label>BID or Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bee Midtown</fullName>
            </value>
            <value>
                <fullName>Better Bankside</fullName>
            </value>
            <value>
                <fullName>Bond Street Association</fullName>
            </value>
            <value>
                <fullName>Brixton BID</fullName>
            </value>
            <value>
                <fullName>Cadogan Estate</fullName>
            </value>
            <value>
                <fullName>Camden Town Unlimited</fullName>
            </value>
            <value>
                <fullName>Chancery Lane Association</fullName>
            </value>
            <value>
                <fullName>Clapham BID</fullName>
            </value>
            <value>
                <fullName>Colmore BID</fullName>
            </value>
            <value>
                <fullName>Decent packaging</fullName>
            </value>
            <value>
                <fullName>DICE FM Partner Venues</fullName>
            </value>
            <value>
                <fullName>Ealing</fullName>
            </value>
            <value>
                <fullName>Euston Town BID</fullName>
            </value>
            <value>
                <fullName>Fitzrovia Partnership</fullName>
            </value>
            <value>
                <fullName>Grosvenor Estate</fullName>
            </value>
            <value>
                <fullName>Hammersmith</fullName>
            </value>
            <value>
                <fullName>Harcourts Inns</fullName>
            </value>
            <value>
                <fullName>Hatton Garden</fullName>
            </value>
            <value>
                <fullName>Heart of London</fullName>
            </value>
            <value>
                <fullName>Ilford BID</fullName>
            </value>
            <value>
                <fullName>InStreatham</fullName>
            </value>
            <value>
                <fullName>Kingston First</fullName>
            </value>
            <value>
                <fullName>Lambeth Borough</fullName>
            </value>
            <value>
                <fullName>Love Wimbledon</fullName>
            </value>
            <value>
                <fullName>Marldon Partnership</fullName>
            </value>
            <value>
                <fullName>New West End Company</fullName>
            </value>
            <value>
                <fullName>Old Street District Partnership</fullName>
            </value>
            <value>
                <fullName>Paddington</fullName>
            </value>
            <value>
                <fullName>Positively Putney</fullName>
            </value>
            <value>
                <fullName>Stratford BID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>