force-app/main/default/objects/Account/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>IF(ParentId &lt;&gt; &quot;&quot;,  Parent.Name &amp; &quot; &quot; &amp; Parent.BillingStreet &amp; &quot; &quot; &amp; Parent.BillingCity &amp; &quot; &quot; &amp; Parent.BillingPostalCode ,  Name &amp; &quot; &quot; &amp; BillingStreet &amp; &quot; &quot; &amp; BillingCity &amp; &quot; &quot; &amp; BillingPostalCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulls in billing details from parent account</inlineHelpText>
    <label>Billing Address Loc</label>
    <type>Text</type>
</CustomField>