force-app/main/default/objects/Account/fields/BillingLatitude__c.field-meta.xml
<CustomField>
    <fullName>BillingLatitude__c</fullName>
    <formula>BillingLatitude</formula>
    <label>Billing Latitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>