force-app/main/default/objects/Account/fields/BillingLongitude__c.field-meta.xml
<CustomField>
    <fullName>BillingLongitude__c</fullName>
    <formula>BillingLongitude</formula>
    <label>Billing Longitude</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>