force-app/main/default/objects/Account/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <formula>BillingPostalCode</formula>
    <label>Billing Postal Code</label>
    <type>Text</type>
</CustomField>