force-app/main/default/objects/Account/fields/BillingStreetLine1__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetLine1__c</fullName>
    <formula>IF(LEN(BillingStreetLineSingle__c) &lt;= 100, BillingStreetLineSingle__c, 
  REVERSE(MID(BillingStreetLineSingleReverse100__c, FIND(&apos;,&apos;, BillingStreetLineSingleReverse100__c) + 1, 100))
)</formula>
    <label>Billing Street Line 1</label>
    <type>Text</type>
</CustomField>