force-app/main/default/objects/Account/fields/BillingStreetLine1Remainder__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetLine1Remainder__c</fullName>
    <formula>TRIM(MID(BillingStreetLineSingle__c, LEN(BillingStreetLine1__c) + 1, LEN(BillingStreetLineSingle__c)))</formula>
    <label>Billing Street Line 1 Remainder</label>
    <type>Text</type>
</CustomField>