force-app/main/default/objects/Account/fields/BillingStreetLine2__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetLine2__c</fullName>
    <formula>TRIM(IF(LEFT(BillingStreetLine1Remainder__c, 1) != &apos;,&apos;, BillingStreetLine1Remainder__c, MID(BillingStreetLine1Remainder__c, 2, LEN(BillingStreetLine1Remainder__c))))</formula>
    <label>Billing Street Line 2</label>
    <type>Text</type>
</CustomField>