force-app/main/default/objects/Account/fields/BillingStreetLineSingle__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetLineSingle__c</fullName>
    <formula>SUBSTITUTE(BillingStreet, MID($Setup.LineBreak__c.Value__c, 2, 2), &apos;, &apos;)</formula>
    <label>Billing Street Line Single</label>
    <type>Text</type>
</CustomField>