force-app/main/default/objects/Account/fields/BillingStreetLineSingleReverse100__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetLineSingleReverse100__c</fullName>
    <formula>REVERSE(LEFT(BillingStreetLineSingle__c, 100))</formula>
    <label>Billing Street Line Single Reverse 100</label>
    <type>Text</type>
</CustomField>