force-app/main/default/objects/Account/fields/Box_Givewaway_Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Box_Givewaway_Form_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not manually tick this field. This is used in the auto-conversion process and to send the right email to customer service.</description>
    <inlineHelpText>Do not manually tick this field. This is used in the auto-conversion process and to send the right email to customer service.</inlineHelpText>
    <label>Box Givewaway Form Complete</label>
    <type>Checkbox</type>
</CustomField>