force-app/main/default/objects/Account/fields/Broker_Cleaner__c.field-meta.xml
<CustomField>
    <fullName>Broker_Cleaner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Cleaner</label>
    <type>Checkbox</type>
</CustomField>