force-app/main/default/objects/Account/fields/budget_category__c.field-meta.xml
<CustomField>
    <fullName>budget_category__c</fullName>
    <label>budget category</label>
    <length>44</length>
    <type>Text</type>
</CustomField>