force-app/main/default/objects/Account/fields/Business_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Registration_Number__c</fullName>
    <label>Business Registration Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>