force-app/main/default/objects/Account/fields/BusinessCentralContactId__c.field-meta.xml
<CustomField>
    <fullName>BusinessCentralContactId__c</fullName>
    <externalId>true</externalId>
    <label>Business Central Contact Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>