force-app/main/default/objects/Account/fields/BusinessCentralContactLastSentDate__c.field-meta.xml
<CustomField>
    <fullName>BusinessCentralContactLastSentDate__c</fullName>
    <label>Business Central Contact Last Sent Date</label>
    <type>DateTime</type>
</CustomField>