force-app/main/default/objects/Account/fields/BusinessCentralId__c.field-meta.xml
<CustomField>
    <fullName>BusinessCentralId__c</fullName>
    <externalId>true</externalId>
    <label>Business Central Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>