force-app/main/default/objects/Account/fields/BusinessCentralSendForcefully__c.field-meta.xml
<CustomField>
    <fullName>BusinessCentralSendForcefully__c</fullName>
    <label>Business Central Send Forcefully</label>
    <type>DateTime</type>
</CustomField>