force-app/main/default/objects/Account/fields/case_safe_id__c.field-meta.xml
<CustomField>
    <fullName>case_safe_id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account case safe id</label>
    <type>Text</type>
</CustomField>