force-app/main/default/objects/Account/fields/Certificate_URL__c.field-meta.xml
<CustomField>
    <fullName>Certificate_URL__c</fullName>
    <formula>&quot;https://widget.thefirstmile.co.uk/?id=&quot;&amp;  case_safe_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate URL</label>
    <type>Text</type>
</CustomField>