force-app/main/default/objects/Account/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <formula>IF(Sales_Last_12_Months__c&gt;20000, &quot;Key Account&quot;,IF(Sales_Last_12_Months__c&gt;10000, &quot;Large&quot;,IF( Sales_Last_12_Months__c &gt;1000, &quot;Medium&quot;, IF( Sales_Last_12_Months__c &gt; 250, &quot;Small&quot;, &quot;Micro&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification</label>
    <type>Text</type>
</CustomField>