force-app/main/default/objects/Account/fields/CO2_Tonnes_Saved_L12M__c.field-meta.xml
<CustomField>
    <fullName>CO2_Tonnes_Saved_L12M__c</fullName>
    <label>CO2 Tonnes Saved L12M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>