force-app/main/default/objects/Account/fields/Col_County__c.field-meta.xml
<CustomField>
    <fullName>Col_County__c</fullName>
    <label>Col_County</label>
    <length>40</length>
    <type>Text</type>
</CustomField>