force-app/main/default/objects/Account/fields/Collection_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Collection_Frequency__c</fullName>
    <label>Collection Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>