force-app/main/default/objects/Account/fields/Collection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Collection_Notes__c</fullName>
    <inlineHelpText>Use this field to record general info about the location or account, eg &apos;Only Beth can order for this site&apos; etc</inlineHelpText>
    <label>General Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>