force-app/main/default/objects/Account/fields/Collection_Pin_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Collection_Pin_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collection Pin Confirmed</label>
    <type>Checkbox</type>
</CustomField>