force-app/main/default/objects/Account/fields/Collection_start_date__c.field-meta.xml
<CustomField>
    <fullName>Collection_start_date__c</fullName>
    <label>Collection start date</label>
    <type>Date</type>
</CustomField>