force-app/main/default/objects/Account/fields/CollectionCount__c.field-meta.xml
<CustomField>
    <fullName>CollectionCount__c</fullName>
    <label>Collection Count</label>
    <summaryForeignKey>Schedule__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>