force-app/main/default/objects/Account/fields/CollectionPriority__c.field-meta.xml
<CustomField>
    <fullName>CollectionPriority__c</fullName>
    <formula>IF(RecordType.Name != &apos;Location&apos;, &apos;&apos;, IF(OR(VIP_Customer__c, On_Priority__c, Complex_Collection__c), &apos;VIP&apos;, IF(TODAY() &lt;= (Enqix_Start_Date__c + 30), &apos;New&apos;, &apos;Normal&apos;)))</formula>
    <label>Collection Priority</label>
    <type>Text</type>
</CustomField>