force-app/main/default/objects/Account/fields/Combine__c.field-meta.xml
<CustomField>
    <fullName>Combine__c</fullName>
    <formula>LEFT(Name, 6) &amp; BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combine</label>
    <type>Text</type>
</CustomField>