force-app/main/default/objects/Account/fields/Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Comments_c__c</fullName>
    <label>Collection notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>