force-app/main/default/objects/Account/fields/Company_number__c.field-meta.xml
<CustomField>
    <fullName>Company_number__c</fullName>
    <label>Company number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>