force-app/main/default/objects/Account/fields/Complex_Collection__c.field-meta.xml
<CustomField>
    <fullName>Complex_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complex Collection?</label>
    <type>Checkbox</type>
</CustomField>