force-app/main/default/objects/Account/fields/Contact_Mobile2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile2__c</fullName>
    <label>Contact_Mobile2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>