force-app/main/default/objects/Account/fields/Contact_Name2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name2__c</fullName>
    <label>Contact_Name2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>