force-app/main/default/objects/Account/fields/contaminationCount__c.field-meta.xml
<CustomField>
    <fullName>contaminationCount__c</fullName>
    <label>Contamination Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>