force-app/main/default/objects/Account/fields/contaminationRule__c.field-meta.xml
<CustomField>
    <fullName>contaminationRule__c</fullName>
    <label>Contamination Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charge</fullName>
                <default>true</default>
                <label>Charge</label>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>