force-app/main/default/objects/Account/fields/Contract_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>Contract_Under_Review__c</fullName>
    <label>Contract Under Review?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Upcoming tender</fullName>
            </value>
            <value>
                <fullName>Contract under review</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>