force-app/main/default/objects/Account/fields/Council__c.field-meta.xml
<CustomField>
    <fullName>Council__c</fullName>
    <label>Council</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barking &amp; Dagenham</fullName>
            </value>
            <value>
                <fullName>Barnet</fullName>
            </value>
            <value>
                <fullName>Bexley</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Brent</fullName>
            </value>
            <value>
                <fullName>Bromley</fullName>
            </value>
            <value>
                <fullName>Camden</fullName>
            </value>
            <value>
                <fullName>City of London</fullName>
            </value>
            <value>
                <fullName>Croydon</fullName>
            </value>
            <value>
                <fullName>Ealing</fullName>
            </value>
            <value>
                <fullName>Enfield</fullName>
            </value>
            <value>
                <fullName>Greenwich</fullName>
            </value>
            <value>
                <fullName>Hackney</fullName>
            </value>
            <value>
                <fullName>hammersmith and fulham</fullName>
                <label>Hammersmith and Fulham</label>
            </value>
            <value>
                <fullName>Haringey</fullName>
            </value>
            <value>
                <fullName>Harrow</fullName>
            </value>
            <value>
                <fullName>Havering</fullName>
            </value>
            <value>
                <fullName>Hillingdon</fullName>
            </value>
            <value>
                <fullName>Hounslow</fullName>
            </value>
            <value>
                <fullName>Islington</fullName>
            </value>
            <value>
                <fullName>Kensington and Chelsea</fullName>
            </value>
            <value>
                <fullName>Kingston upon Thames</fullName>
            </value>
            <value>
                <fullName>Lambeth</fullName>
            </value>
            <value>
                <fullName>Lewisham</fullName>
            </value>
            <value>
                <fullName>Merton</fullName>
            </value>
            <value>
                <fullName>More than one</fullName>
            </value>
            <value>
                <fullName>Newham</fullName>
            </value>
            <value>
                <fullName>Redbridge</fullName>
            </value>
            <value>
                <fullName>Richmond upon Thames</fullName>
            </value>
            <value>
                <fullName>Solihull</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>