force-app/main/default/objects/Account/fields/Count_Wheelie_collection__c.field-meta.xml
<CustomField>
    <fullName>Count_Wheelie_collection__c</fullName>
    <label>Count Wheelie collection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>