force-app/main/default/objects/Account/fields/Covid_No_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Covid_No_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covid No Schedule</label>
    <type>Checkbox</type>
</CustomField>