force-app/main/default/objects/Account/fields/Covid_Reopen_Date__c.field-meta.xml
<CustomField>
    <fullName>Covid_Reopen_Date__c</fullName>
    <label>Covid Reopen Date</label>
    <type>Date</type>
</CustomField>