force-app/main/default/objects/Account/fields/CP_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>CP_Account_Code__c</fullName>
    <externalId>true</externalId>
    <label>CP Account Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>